[package]
name = "silicone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
libc = "0.2.170"
silicone-macro = {path = "../silicone-macro"}
